# kda-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  kda-tool.cabal  result
.github/workflows/: build.yml  nix.yml
.golden/fillValueVars-transfer-create/: golden
exe/: Main.hs
src/: AppMain.hs  DB.hs  Keys.hs  Logger.hs  TxTemplate.hs  Utils.hs
src/Commands/: CombineSigs.hs  Cut.hs  GenTx.hs  Keygen.hs  ListKeys.hs  Local.hs  Mempool.hs  Poll.hs  Send.hs  Sign.hs  Verify.hs  WalletSign.hs
src/DB/: Message.hs
src/Kadena/: SigningApi.hs  SigningTypes.hs
src/Types/: Encoding.hs  Env.hs  HostPort.hs  KeyType.hs  KeygenArgs.hs  Node.hs  TxInputs.hs
test/: HostPortSpec.hs  TemplateSpec.hs  TestMain.hs
test/golden/: transfer-create.ktpl
