cabal-version:       >=1.10
name:                kda-tool
version:             0.1.0.0
synopsis:            Kadena command line tool
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Kadena LLC
-- category:
build-type:          Simple

library
  -- other-modules:
  exposed-modules:
    AppMain
    Commands.Local
    Commands.Poll
    Commands.Send
    Logger
    Types.Env
    Types.HostPort
    Types.Node
    Utils

  build-depends:
      Decimal >= 0.5 && < 0.6
    , HsYAML >= 0.2.1 && < 0.3
    , HsYAML-aeson >= 0.2 && < 0.3
    , aeson >= 1.4 && < 1.5
    , async >= 2.2 && < 2.3
    , attoparsec >= 0.13 && < 0.14
    , base >= 4.13 && < 4.14
    , base16 >= 0.3.0 && < 0.4
    , bytestring >= 0.10 && < 0.11
    , cardano-crypto >= 1.1.0 && < 1.2
    , cassava >= 0.5 && < 0.6
    , chainweb-api
    , connection
    , containers >= 0.6 && < 0.7
    , cryptohash-sha256 >= 0.11 && < 0.12
    , cryptohash-sha512 >= 0.11 && < 0.12
    , cryptonite >= 0.28 && < 0.29
    , data-default >= 0.7 && < 0.8
    , dlist >= 0.8 && < 0.9
    , errors >= 2.3 && < 2.4
    , filepath
    , http-client >= 0.6 && < 0.7
    , http-client-tls >= 0.3 && < 0.4
    , http-types >= 0.12 && < 0.13
    , kadena-signing-api >= 0.1
    , katip >= 0.8 && < 0.9
    , lens >= 4.18 && < 4.19
    , lens-aeson >= 1.1 && < 1.2
    , memory >= 0.15.0 && < 0.16
    , mtl >= 2.2 && < 2.3
    , mwc-random >= 0.14 && < 0.16
    , network-uri >= 2.6 && < 2.7
    , optparse-applicative >= 0.15 && < 0.17
    , pact >= 4.3.0
    , resource-pool >= 0.2 && < 0.3
    , retry >= 0.8 && < 0.9
    , scientific >= 0.3 && < 0.4
    , stm >= 2.5 && < 2.6
    , stm-linkedlist >= 0.1 && < 0.2
    , string-conv >= 0.1 && < 0.2
    , text >= 1.2 && < 1.3
    , time >= 1.9 && < 1.10
    , transformers >= 0.5 && < 0.6
    , unordered-containers >= 0.2.14 && <= 0.2.16
    , vector >= 0.12 && < 0.13
    , zlib >= 0.6 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
  ghc-options: -threaded -Wall -Wno-unticked-promoted-constructors -fno-show-valid-hole-fits

executable kda
  main-is: Main.hs

  build-depends:
      base
    , kda-tool
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -threaded -Wall -Wno-unticked-promoted-constructors -fno-show-valid-hole-fits
