name:                kda-tool
version:             1.1
synopsis:            Kadena command line tool
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Kadena LLC
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  -- other-modules:
  exposed-modules:
    AppMain
    Commands.CombineSigs
    Commands.Cut
    Commands.GenTx
    Commands.Keygen
    Commands.ListKeys
    Commands.Local
    Commands.Mempool
    Commands.Poll
    Commands.Send
    Commands.Sign
    Commands.Verify
    Commands.WalletSign
    Keys
    Logger
    TxTemplate
    Types.Encoding
    Types.Env
    Types.HostPort
    Types.KeyType
    Types.Node
    Types.TxInputs
    Utils

  build-depends:
      Decimal
    , HsYAML
    , HsYAML-aeson
    , aeson
    , async
    , attoparsec
    , base >= 4.13 && < 5
    , base16
    , base64
    , binary
    , bytestring >= 0.10.12
    , cardano-crypto
    , cassava
    , chainweb-api
    , connection
    , containers
    , cryptohash-sha256
    , cryptohash-sha512
    , cryptonite
    , data-default
    , directory
    , dlist
    , echo
    , errors
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , kadena-signing-api
    , katip
    , lens
    , lens-aeson
    , memory
    , mtl
    , mustache
    , mwc-random
    , network-uri
    , optparse-applicative
    , pact
    , process
    , resource-pool
    , retry
    , safe-exceptions
    , scientific
    , servant
    , servant-client
    , stm
    , stm-linkedlist
    , string-conv
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
  ghc-options: -Wall -Wno-unticked-promoted-constructors -fno-show-valid-hole-fits

executable kda
  main-is: Main.hs

  build-depends:
      base
    , kda-tool
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -threaded -Wall -Wno-unticked-promoted-constructors -fno-show-valid-hole-fits

test-suite kda-tool-tests
  main-is:          TestMain.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  default-language: Haskell2010
  default-extensions:
    ScopedTypeVariables
  ghc-options:      -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
      Decimal
    , HsYAML
    , HsYAML-aeson
    , aeson
    , async
    , attoparsec
    , base
    , base16
    , base64
    , binary
    , bytestring
    , cardano-crypto
    , cassava
    , chainweb-api
    , connection
    , containers
    , cryptohash-sha256
    , cryptohash-sha512
    , cryptonite
    , data-default
    , directory
    , dlist
    , echo
    , errors
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , kadena-signing-api
    , katip
    , lens
    , lens-aeson
    , memory
    , mtl
    , mustache
    , mwc-random
    , network-uri
    , optparse-applicative
    , pact
    , process
    , resource-pool
    , retry
    , scientific
    , servant
    , servant-client
    , stm
    , stm-linkedlist
    , string-conv
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , zlib

    , hspec

  other-modules:
    HostPortSpec
    TemplateSpec
